tests/negative/comptime/int_oob.orng
// 
const x: Int8 = comptime{(100 as Int8) + (50 as Int8)}
fn main() -> Int8 {
    x
}